# spark-space

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: datasets.py  datasources.py  executions.py  logs.py  notebooks.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: datasets.py  datasources.py  executions.py  logs.py  notebooks.py
backend/app/services/: catalog.py  datasources.py  logbook.py
backend/app/services/connectors/: tester.py
backend/app/services/execution/: base.py  factory.py  pipeline.py  router.py  spark_manager.py
backend/app/services/execution/adapters/: __init__.py
backend/app/services/execution/executors/: __init__.py  dataset_preview_executor.py  markdown_executor.py  natural_language_executor.py  python_dataframe_executor.py
backend/app/services/storage/: datasets.py
backend/tests/: test_execution_pipeline.py  test_python_dataframe_executor.py
config/: application.yml
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: architecture.md  configuration.md  deployment.md  future-rule-engine.md  local-setup.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: logs.sh  restart.bat  restart.sh  start.bat  start.sh  status.sh  stop.bat  stop.sh
(+33 files in other folders)
