[project]
name = "execution-workspace-backend"
version = "0.1.0"
description = "FastAPI backend for the Execution Workspace platform"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "greenlet>=3.1.1",
  "httpx>=0.28.0",
  "orjson>=3.10.0",
  "pandas>=2.2.3",
  "pyarrow>=18.1.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "pyyaml>=6.0.2",
  "python-multipart>=0.0.18",
  "pyspark[connect]>=4.1.2",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
  "cryptography>=44.0.0",
]

[build-system]
requires = ["setuptools>=75.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
